--- a/22691261_HaXuanPhu_SpringAI/src/main/resources/templates/product/list.html
+++ b/22691261_HaXuanPhu_SpringAI/src/main/resources/templates/product/list.html
@@ -18,6 +18,7 @@
                 <li class="nav-item"><a class="nav-link" href="/customers">Khách hàng</a></li>
                 <li class="nav-item"><a class="nav-link active" href="/products">Sản phẩm</a></li>
                 <li class="nav-item"><a class="nav-link" href="/orders">Hóa đơn</a></li>
+                <li class="nav-item"><a class="nav-link" href="/ai">🤖 AI Assistant</a></li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item" sec:authorize="isAuthenticated()">
